Implement user and group management features with DTOs and service layer